[gd_scene load_steps=17 format=3 uid="uid://tpsyviqpqskn"]

[ext_resource type="Script" path="res://ModeGame/Maps/boss_room.gd" id="1_2i8tk"]
[ext_resource type="PackedScene" uid="uid://bsg0351mx3b4u" path="res://addons/MetroidvaniaSystem/Nodes/RoomInstance.tscn" id="1_v5rg3"]
[ext_resource type="TileSet" uid="uid://yekejfqwd2kt" path="res://ModeGame/Resources/Tileset.tres" id="2_66k1g"]
[ext_resource type="Script" path="res://ModeGame/State/StateMachine.gd" id="4_gom21"]
[ext_resource type="PackedScene" uid="uid://bkf20kehm1hev" path="res://enemies/Boss/nig_hoggr.tscn" id="4_yk8m7"]
[ext_resource type="Script" path="res://enemies/Boss/States/Swipe.gd" id="5_tmu8h"]
[ext_resource type="Texture2D" uid="uid://df4h8d3hskcm3" path="res://ModeGame/Sprites/NigHoggr.png" id="6_8tari"]
[ext_resource type="Texture2D" uid="uid://b46kidjrtykd5" path="res://ModeGame/Sprites/NidHoggrBody2.png" id="7_g8sim"]
[ext_resource type="Texture2D" uid="uid://0ma5mxng8yp3" path="res://ModeGame/Sprites/NidHoggrBody3.png" id="8_by72j"]
[ext_resource type="PackedScene" uid="uid://byffox285e1mp" path="res://ModeGame/NPCs/Bird.tscn" id="8_tsdau"]
[ext_resource type="Texture2D" uid="uid://d2my1x7ud2xfi" path="res://ModeGame/Sprites/NidHoggrTail.png" id="9_y4g18"]
[ext_resource type="Script" path="res://ModeGame/Components/hitbox_component.gd" id="10_d138r"]
[ext_resource type="Script" path="res://ModeGame/Components/hurtbox_component.gd" id="11_fucot"]
[ext_resource type="Script" path="res://ModeGame/Components/health_component.gd" id="12_7688p"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ctbtr"]
size = Vector2(180, 1697)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_dt1ml"]
size = Vector2(157, 1704)

[node name="3" type="Node2D"]
script = ExtResource("1_2i8tk")

[node name="RoomInstance" parent="." instance=ExtResource("1_v5rg3")]

[node name="TileMap" type="TileMap" parent="."]
tile_set = ExtResource("2_66k1g")
format = 2
layer_0/tile_data = PackedInt32Array(1769525, 524290, 7, 1769524, 524290, 7, 1769523, 458754, 7, 1769474, 589826, 7, 1441793, 524290, 7, 1376257, 524290, 7, 1376258, 589826, 7, 1310721, 524290, 7, 1310722, 589826, 7, 1245185, 524290, 7, 1245186, 589826, 7, 1179649, 524290, 7, 1179650, 589826, 7, 1114113, 524290, 7, 1114114, 589826, 7, 1048577, 524290, 7, 1048578, 589826, 7, 983041, 524290, 7, 983042, 589826, 7, 917505, 524290, 7, 917506, 589826, 7, 851969, 524290, 7, 851970, 589826, 7, 786433, 524290, 7, 786434, 589826, 7, 720897, 524290, 7, 720898, 589826, 7, 655361, 524290, 7, 655362, 589826, 7, 589825, 524290, 7, 589826, 589826, 7, 524289, 524290, 7, 524290, 589826, 7, 458753, 524290, 7, 458754, 589826, 7, 393217, 524290, 7, 393218, 589826, 7, 327681, 524290, 7, 327682, 589826, 7, 262145, 524290, 7, 262146, 589826, 7, 196609, 524290, 7, 196610, 589826, 7, 131073, 524290, 7, 131074, 589826, 10, 3, 524290, 7, 65539, 524290, 7, 4, 524290, 7, 65540, 524290, 7, 5, 524290, 7, 65541, 524290, 7, 6, 524290, 7, 65542, 524290, 7, 7, 524290, 7, 65543, 524290, 7, 8, 524290, 7, 65544, 524290, 7, 9, 524290, 7, 65545, 524290, 7, 10, 524290, 7, 65546, 524290, 7, 11, 524290, 7, 65547, 524290, 7, 12, 524290, 7, 65548, 524290, 7, 13, 524290, 7, 65549, 524290, 7, 14, 524290, 7, 65550, 524290, 7, 15, 524290, 7, 65551, 524290, 7, 16, 524290, 7, 65552, 524290, 7, 17, 524290, 7, 65553, 524290, 7, 18, 524290, 7, 65554, 524290, 7, 19, 524290, 7, 65555, 524290, 7, 20, 524290, 7, 65556, 524290, 7, 21, 524290, 7, 65557, 524290, 7, 22, 524290, 7, 65558, 524290, 7, 23, 524290, 7, 65559, 524290, 7, 24, 524290, 7, 65560, 524290, 7, 29, 524290, 7, 65565, 524290, 7, 30, 524290, 7, 65566, 524290, 7, 31, 524290, 7, 65567, 524290, 7, 32, 524290, 7, 65568, 524290, 7, 33, 524290, 7, 65569, 524290, 7, 34, 524290, 7, 65570, 524290, 7, 35, 524290, 7, 65571, 524290, 7, 36, 524290, 7, 65572, 524290, 7, 37, 524290, 7, 65573, 524290, 7, 38, 524290, 7, 65574, 524290, 7, 39, 524290, 7, 65575, 524290, 7, 40, 524290, 7, 65576, 524290, 7, 41, 524290, 7, 65577, 524290, 7, 42, 524290, 7, 65578, 524290, 7, 43, 524290, 7, 65579, 524290, 7, 44, 524290, 7, 65580, 524290, 7, 45, 524290, 7, 65581, 524290, 7, 46, 524290, 7, 65582, 524290, 7, 47, 524290, 7, 65583, 524290, 7, 48, 524290, 7, 65584, 524290, 7, 49, 524290, 7, 65585, 524290, 7, 1376307, 458754, 7, 1376308, 524290, 7, 1310771, 458754, 7, 1310772, 524290, 7, 1245235, 458754, 7, 1245236, 524290, 7, 1179699, 458754, 7, 1179700, 524290, 7, 1114163, 458754, 7, 1114164, 524290, 7, 1048627, 458754, 7, 1048628, 524290, 7, 983091, 458754, 7, 983092, 524290, 7, 917555, 458754, 7, 917556, 524290, 7, 852019, 458754, 7, 852020, 524290, 7, 786483, 458754, 7, 786484, 524290, 7, 720947, 458754, 7, 720948, 524290, 7, 655411, 458754, 7, 655412, 524290, 7, 589875, 458754, 7, 589876, 524290, 7, 131123, 655362, 10, 131124, 524290, 7, 196659, 458754, 7, 196660, 524290, 7, 262195, 458754, 7, 262196, 524290, 7, 327731, 458754, 7, 327732, 524290, 7, 393267, 458754, 7, 393268, 524290, 7, 458803, 458754, 7, 458804, 524290, 7, 524339, 458754, 7, 524340, 524290, 7, 65586, 524290, 7, 131122, 524290, 8, 50, 524290, 7, 131075, 524290, 8, 131076, 524290, 8, 131077, 524290, 8, 131078, 524290, 8, 131079, 524290, 8, 131080, 524290, 8, 131081, 524290, 8, 131082, 524290, 8, 131083, 524290, 8, 131084, 524290, 8, 131085, 524290, 8, 131086, 524290, 8, 131087, 524290, 8, 131088, 524290, 8, 131089, 524290, 8, 131090, 524290, 8, 131091, 524290, 8, 131092, 524290, 8, 131093, 524290, 8, 131094, 524290, 8, 131095, 524290, 8, 131102, 524290, 8, 131103, 524290, 8, 131104, 524290, 8, 131105, 524290, 8, 131106, 524290, 8, 131107, 524290, 8, 131108, 524290, 8, 131109, 524290, 8, 131110, 524290, 8, 131111, 524290, 8, 131112, 524290, 8, 131113, 524290, 8, 131114, 524290, 8, 131115, 524290, 8, 131116, 524290, 8, 131117, 524290, 8, 131118, 524290, 8, 131119, 524290, 8, 131120, 524290, 8, 131121, 524290, 8, 65587, 524290, 7, 51, 524290, 7, 52, 524290, 7, 65588, 524290, 7, 53, 524290, 7, 65589, 524290, 7, 131125, 524290, 7, 196661, 524290, 7, 262197, 524290, 7, 327733, 524290, 7, 393269, 524290, 7, 458805, 524290, 7, 524341, 524290, 7, 589877, 524290, 7, 655413, 524290, 7, 720949, 524290, 7, 786485, 524290, 7, 852021, 524290, 7, 917557, 524290, 7, 983093, 524290, 7, 1048629, 524290, 7, 1114165, 524290, 7, 1179701, 524290, 7, 1245237, 524290, 7, 1310773, 524290, 7, 1376309, 524290, 7, 1835010, 589826, 7, 1835009, 524290, 7, 1769473, 524290, 7, 1900544, 524290, 7, 1835008, 524290, 7, 1769472, 524290, 7, 1441792, 524290, 7, 1376256, 524290, 7, 1310720, 524290, 7, 1245184, 524290, 7, 1179648, 524290, 7, 1114112, 524290, 7, 1048576, 524290, 7, 983040, 524290, 7, 917504, 524290, 7, 851968, 524290, 7, 786432, 524290, 7, 720896, 524290, 7, 655360, 524290, 7, 589824, 524290, 7, 262144, 524290, 7, 327680, 524290, 7, 393216, 524290, 7, 458752, 524290, 7, 524288, 524290, 7, 196608, 524290, 7, 131072, 524290, 7, 65536, 524290, 7, 0, 524290, 7, 1, 524290, 7, 2, 524290, 7, 65538, 524290, 7, 65537, 524290, 7, 1900545, 524290, 7, 1900546, 589826, 7, 1835059, 458754, 7, 1835060, 524290, 7, 1835061, 524290, 7, 1900597, 524290, 7, 1900596, 524290, 7, 1900595, 458754, 7, 1441843, 458754, 7, 1441844, 524290, 7, 1441845, 524290, 7, 1441794, 589826, 7, 1769497, 65538, 0, 1769498, 65538, 0, 1769499, 65538, 0, 1769500, 65538, 0, 1703938, 589826, 7, 1638402, 589826, 7, 1572866, 589826, 7, 1507330, 589826, 7, 1703937, 524290, 7, 1638401, 524290, 7, 1572865, 524290, 7, 1507329, 524290, 7, 1507328, 524290, 7, 1572864, 524290, 7, 1638400, 524290, 7, 1703936, 524290, 7, 1703987, 458754, 7, 1703988, 524290, 7, 1638451, 458754, 7, 1638452, 524290, 7, 1572915, 458754, 7, 1572916, 524290, 7, 1507379, 458754, 7, 1507380, 524290, 7, 1507381, 524290, 7, 1572917, 524290, 7, 1638453, 524290, 7, 1703989, 524290, 7, 1769475, 65538, 0, 1769476, 65538, 0, 1769477, 65538, 0, 1769478, 65538, 0, 1769479, 65538, 0, 1769480, 65538, 0, 1769481, 65538, 0, 1769482, 65538, 0, 1769483, 65538, 0, 1769484, 65538, 0, 1769485, 65538, 0, 1769486, 65538, 0, 1769487, 65538, 0, 1769488, 65538, 0, 1769489, 65538, 0, 1769490, 65538, 0, 1769491, 65538, 0, 1769492, 65538, 0, 1769493, 65538, 0, 1769494, 65538, 0, 1769495, 65538, 0, 1769496, 65538, 0, 1769504, 65538, 0, 1769505, 65538, 0, 1769506, 65538, 0, 1769507, 65538, 0, 1769508, 65538, 0, 1769509, 65538, 0, 1769501, 65538, 0, 1769502, 65538, 0, 1769503, 65538, 0, 1769510, 65538, 0, 1769511, 65538, 0, 1769512, 65538, 0, 1769513, 65538, 0, 1769514, 65538, 0, 1769515, 65538, 0, 1769516, 65538, 0, 1769517, 65538, 0, 1769518, 65538, 0, 1769519, 65538, 0, 1769520, 65538, 0, 1769521, 65538, 0, 1769522, 65538, 0, 131096, 524290, 8, 131097, 524290, 8, 131098, 524290, 8, 131099, 524290, 8, 131100, 524290, 8, 131101, 524290, 8, 25, 524290, 7, 65561, 524290, 7, 65562, 524290, 7, 65563, 524290, 7, 65564, 524290, 7, 28, 524290, 7, 27, 524290, 7, 26, 524290, 7)

[node name="StateMachine" type="Node" parent="." node_paths=PackedStringArray("initial_state", "player")]
script = ExtResource("4_gom21")
initial_state = NodePath("Swipe")
player = NodePath("../Node2D/boss")

[node name="Swipe" type="Node" parent="StateMachine"]
script = ExtResource("5_tmu8h")

[node name="Node2D" type="Node2D" parent="."]

[node name="boss" type="CharacterBody2D" parent="Node2D"]
position = Vector2(1509, 742)
rotation = -1.5708
collision_layer = 128
collision_mask = 0

[node name="NigHoggr" type="CharacterBody2D" parent="Node2D/boss"]
collision_layer = 128
collision_mask = 0

[node name="Sprite2d" type="Sprite2D" parent="Node2D/boss/NigHoggr"]
texture = ExtResource("6_8tari")

[node name="NidHoggrBody2" type="Sprite2D" parent="Node2D/boss/NigHoggr"]
position = Vector2(0, 209)
texture = ExtResource("7_g8sim")

[node name="NidHoggrBody3" type="Sprite2D" parent="Node2D/boss/NigHoggr"]
position = Vector2(-2, 541)
texture = ExtResource("8_by72j")

[node name="NidHoggrBody4" type="Sprite2D" parent="Node2D/boss/NigHoggr"]
position = Vector2(-2, 771)
texture = ExtResource("8_by72j")

[node name="NidHoggrBody3" type="Sprite2D" parent="Node2D/boss/NigHoggr/NidHoggrBody4"]
position = Vector2(1, 228)
texture = ExtResource("8_by72j")

[node name="NidHoggrBody5" type="Sprite2D" parent="Node2D/boss/NigHoggr"]
position = Vector2(1, 1225)
texture = ExtResource("8_by72j")

[node name="NidHoggrTail" type="Sprite2D" parent="Node2D/boss/NigHoggr"]
position = Vector2(-2, 1345)
texture = ExtResource("9_y4g18")

[node name="HitBoxComponent" type="Area2D" parent="Node2D/boss"]
script = ExtResource("10_d138r")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Node2D/boss/HitBoxComponent"]
position = Vector2(-10, 677.5)
shape = SubResource("RectangleShape2D_ctbtr")

[node name="HurtBoxComponent" type="Area2D" parent="Node2D/boss" node_paths=PackedStringArray("health")]
script = ExtResource("11_fucot")
health = NodePath("../HealthComponent")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Node2D/boss/HurtBoxComponent"]
position = Vector2(-10.5, 681)
shape = SubResource("RectangleShape2D_dt1ml")

[node name="HealthComponent" type="Node2D" parent="Node2D/boss"]
script = ExtResource("12_7688p")
max_health = 50

[node name="boss" parent="Node2D/boss" instance=ExtResource("4_yk8m7")]
position = Vector2(1509, 742)
rotation = -1.5708

[node name="Bird" parent="." instance=ExtResource("8_tsdau")]
visible = false
position = Vector2(828, 788)
text = "I'm Evil HAHAHAHAHA I guess you'll need to play the for sure sequel"
