[gd_scene load_steps=42 format=3 uid="uid://bfpti047n82k7"]

[ext_resource type="Shader" path="res://ModeGame/Player.gdshader" id="1_meept"]
[ext_resource type="Texture2D" uid="uid://6f2g8lqmvj6v" path="res://ModeGame/Sprites/Hel_IndigoCombinedSheet.png" id="2_eqxaf"]
[ext_resource type="PackedScene" uid="uid://1qtp6vbeknpe" path="res://ModeGame/Attacks/PlayerSlash.tscn" id="2_gd3p6"]
[ext_resource type="Script" path="res://ModeGame/Components/health_component.gd" id="3_avxgd"]
[ext_resource type="Script" path="res://ModeGame/Components/hurtbox_component.gd" id="4_ug1ym"]
[ext_resource type="Script" path="res://ModeGame/BlinkAnimationPlayer.gd" id="6_bgkal"]
[ext_resource type="Script" path="res://ModeGame/Components/interaction_area.gd" id="7_x0aku"]
[ext_resource type="Script" path="res://ModeGame/State/StateMachine.gd" id="8_x34yq"]
[ext_resource type="Script" path="res://ModeGame/State/Idle.gd" id="9_m6irb"]
[ext_resource type="Script" path="res://ModeGame/State/Walk.gd" id="10_snbxi"]
[ext_resource type="Script" path="res://ModeGame/State/Fall.gd" id="11_o50o7"]
[ext_resource type="Script" path="res://ModeGame/State/Jump.gd" id="12_slaof"]
[ext_resource type="Script" path="res://ModeGame/State/Attack.gd" id="13_6hh6b"]
[ext_resource type="Script" path="res://ModeGame/State/Wall.gd" id="14_bujxx"]
[ext_resource type="Script" path="res://ModeGame/State/Dash.gd" id="15_qqdfo"]
[ext_resource type="Script" path="res://ModeGame/State/Interact.gd" id="16_c3yxg"]
[ext_resource type="Texture2D" uid="uid://qa6ect85j6mj" path="res://ModeGame/Sprites/WingDash.png" id="17_x5581"]
[ext_resource type="PackedScene" uid="uid://bo13cras0hxdk" path="res://ModeGame/Attacks/ShieldBash.tscn" id="18_er744"]
[ext_resource type="Script" path="res://ModeGame/State/Damaged.gd" id="19_lnjt3"]
[ext_resource type="Script" path="res://ModeGame/State/Shoot.gd" id="20_0hupt"]
[ext_resource type="PackedScene" uid="uid://ir0uj46hrnir" path="res://ModeGame/Attacks/SlashFury.tscn" id="20_fvtus"]
[ext_resource type="PackedScene" uid="uid://bre72s213i4vg" path="res://ModeGame/Attacks/PlayerProjectileSpawner.tscn" id="22_cl1b4"]

[sub_resource type="GDScript" id="GDScript_weu6d"]
script/source = "extends CharacterBody2D

const SPEED = 300.0
const JUMP_VELOCITY = -450.0

var gravity: int = ProjectSettings.get_setting(\"physics/2d/default_gravity\")
var animation: String

var reset_position: Vector2

@onready var blinkAnimationPlayer = $BlinkAnimationPlayer

func _ready() -> void:
	on_enter()


func _physics_process(delta: float) -> void:
	if not is_on_floor():
		velocity.y += gravity * delta
	
	if Input.is_action_just_pressed(\"ui_accept\") and is_on_floor():
		if Input.is_action_pressed(\"ui_down\"):
			position.y += 8
		else:
			velocity.y = JUMP_VELOCITY
	
	var direction := Input.get_axis(\"ui_left\", \"ui_right\")
	if direction:
		velocity.x = direction * SPEED
	else:
		velocity.x = move_toward(velocity.x, 0, SPEED)

	move_and_slide()
	
	var new_animation = &\"Idle\"
	if velocity.y < 0:
		new_animation = &\"Jump\"
	elif velocity.y >= 0 and not is_on_floor():
		new_animation = &\"Fall\"
	elif absf(velocity.x) > 1:
		new_animation = &\"Run\"
	
	if new_animation != animation:
		animation = new_animation
		$AnimationPlayer.play(new_animation)
	
	if velocity.x > 1:
		$Sprite2D.flip_h = false
	elif velocity.x < -1:
		$Sprite2D.flip_h = true

func kill():
	position = reset_position

func on_enter():
	reset_position = position



"

[sub_resource type="RectangleShape2D" id="RectangleShape2D_yj7bn"]
size = Vector2(21.5, 62)

[sub_resource type="ShaderMaterial" id="ShaderMaterial_yulm7"]
shader = ExtResource("1_meept")
shader_parameter/active = false
shader_parameter/life = true
shader_parameter/death = true

[sub_resource type="Animation" id="Animation_qbnra"]
resource_name = "Dash"
length = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D/WingDash:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [1, 0]
}

[sub_resource type="Animation" id="Animation_mul1d"]
resource_name = "Fall"
length = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [7, 8]
}

[sub_resource type="Animation" id="Animation_76fpo"]
resource_name = "Idle"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_58w5b"]
resource_name = "Jump"
length = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [6, 7]
}

[sub_resource type="Animation" id="Animation_owew4"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D/WingDash:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_l0tvd"]
resource_name = "Run"
length = 0.4
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [2, 3, 4, 3]
}

[sub_resource type="Animation" id="Animation_pl1a0"]
resource_name = "ShieldBash"
length = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D/WingDash:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [1, 0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_rqeoy"]
_data = {
"Dash": SubResource("Animation_qbnra"),
"Fall": SubResource("Animation_mul1d"),
"Idle": SubResource("Animation_76fpo"),
"Jump": SubResource("Animation_58w5b"),
"RESET": SubResource("Animation_owew4"),
"Run": SubResource("Animation_l0tvd"),
"ShieldBash": SubResource("Animation_pl1a0")
}

[sub_resource type="Animation" id="Animation_r20g6"]
resource_name = "Death"
length = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:material:shader_parameter/life")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0.1),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:material:shader_parameter/death")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.1),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [true]
}

[sub_resource type="Animation" id="Animation_kb6jk"]
resource_name = "Life"
length = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:material:shader_parameter/life")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0.1),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:material:shader_parameter/death")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.1),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [false]
}

[sub_resource type="Animation" id="Animation_y4g00"]
length = 0.001

[sub_resource type="Animation" id="Animation_aooeu"]
resource_name = "Start"
length = 0.2
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:material:shader_parameter/active")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}

[sub_resource type="Animation" id="Animation_2n4xi"]
resource_name = "Stop"
length = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:material:shader_parameter/active")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_tx15g"]
_data = {
"Death": SubResource("Animation_r20g6"),
"Life": SubResource("Animation_kb6jk"),
"RESET": SubResource("Animation_y4g00"),
"Start": SubResource("Animation_aooeu"),
"Stop": SubResource("Animation_2n4xi")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_e8vvw"]
size = Vector2(22, 62)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_e7ajr"]
size = Vector2(21, 62)

[node name="Player" type="CharacterBody2D" groups=["Player"]]
z_index = 1
script = SubResource("GDScript_weu6d")
metadata/player = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(2.25, 15)
shape = SubResource("RectangleShape2D_yj7bn")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture_filter = 1
material = SubResource("ShaderMaterial_yulm7")
position = Vector2(0, 11)
scale = Vector2(1.5, 1.5)
texture = ExtResource("2_eqxaf")
hframes = 12

[node name="WingDash" type="Sprite2D" parent="Sprite2D"]
z_index = -1
position = Vector2(-21.365, 1.333)
scale = Vector2(0.666667, 0.666667)
texture = ExtResource("17_x5581")
hframes = 3

[node name="ShieldBash" parent="Sprite2D" instance=ExtResource("18_er744")]
visible = false
position = Vector2(13.3333, 0)
scale = Vector2(0.666667, 0.666667)

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_rqeoy")
}

[node name="HealthComponent" type="Node2D" parent="."]
visible = false
script = ExtResource("3_avxgd")
max_health = 10

[node name="PlayerSlash" parent="." instance=ExtResource("2_gd3p6")]
visible = false

[node name="BlinkAnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_tx15g")
}
script = ExtResource("6_bgkal")

[node name="HurtBoxComponent" type="Area2D" parent="." node_paths=PackedStringArray("health")]
script = ExtResource("4_ug1ym")
health = NodePath("../HealthComponent")
hurtbox_owner = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="HurtBoxComponent"]
visible = false
position = Vector2(2, 15)
shape = SubResource("RectangleShape2D_e8vvw")

[node name="Timer" type="Timer" parent="HurtBoxComponent"]

[node name="InteractionPlayer" type="Area2D" parent="."]
script = ExtResource("7_x0aku")

[node name="CollisionShape2D" type="CollisionShape2D" parent="InteractionPlayer"]
position = Vector2(2.5, 15)
shape = SubResource("RectangleShape2D_e7ajr")

[node name="StateMachine" type="Node" parent="." node_paths=PackedStringArray("initial_state", "player")]
script = ExtResource("8_x34yq")
initial_state = NodePath("Idle")
player = NodePath("..")
debug = true

[node name="Idle" type="Node" parent="StateMachine"]
script = ExtResource("9_m6irb")

[node name="Walk" type="Node" parent="StateMachine"]
script = ExtResource("10_snbxi")

[node name="Fall" type="Node" parent="StateMachine"]
script = ExtResource("11_o50o7")

[node name="Jump" type="Node" parent="StateMachine"]
script = ExtResource("12_slaof")

[node name="Attack" type="Node" parent="StateMachine"]
script = ExtResource("13_6hh6b")

[node name="Wall" type="Node" parent="StateMachine"]
script = ExtResource("14_bujxx")

[node name="Dash" type="Node" parent="StateMachine"]
script = ExtResource("15_qqdfo")

[node name="Interact" type="Node" parent="StateMachine"]
script = ExtResource("16_c3yxg")

[node name="Damaged" type="Node" parent="StateMachine"]
script = ExtResource("19_lnjt3")

[node name="Shoot" type="Node" parent="StateMachine"]
script = ExtResource("20_0hupt")

[node name="SlashFury" parent="." instance=ExtResource("20_fvtus")]
visible = false
position = Vector2(24, 14)

[node name="PlayerProjectileSpawner" parent="." instance=ExtResource("22_cl1b4")]
position = Vector2(17, 0)

[connection signal="invincibility_ended" from="HurtBoxComponent" to="BlinkAnimationPlayer" method="_on_hurt_box_component_invincibility_ended"]
[connection signal="invincibility_started" from="HurtBoxComponent" to="BlinkAnimationPlayer" method="_on_hurt_box_component_invincibility_started"]
[connection signal="timeout" from="HurtBoxComponent/Timer" to="HurtBoxComponent" method="_on_timer_timeout"]
